--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@headlessui/vue": "^1.7.23",
+    "@vueuse/core": "^12.8.2",
     "pinia": "^3.0.1",
+    "validator": "^13.12.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-tel-input": "^9.3.0",
+    "vue3-google-map": "^0.21.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.4",
+    "@types/validator": "^13.12.2",
+    "@types/vue-tel-input": "^2.1.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.4.0",
